--- a/package.json
+++ b/package.json
@@ -77,12 +77,12 @@
     "watch": "npm-run-all --parallel watch-css watch-js",
     "watch-js": "nodemon --ignore js/dist/ --ignore dist/ -e js -x \"npm-run-all js-compile* js-minify*\"",
     "watch-css": "nodemon --ignore dist/ --ignore css/ --ignore scss/partials/ -e scss -x \"npm run css\"",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./stories/static,./node_modules -p 6006",
     "build-storybook": "build-storybook"
   },
   "peerDependencies": {
     "perfect-scrollbar": "^1.5.0",
-    "popper.js": "^1.16.1"
+    "@popperjs/core": "^2.0.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -93,9 +93,14 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "@popperjs/core": "^2.0.6",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.1",
     "@storybook/addon-docs": "^5.3.9",
     "@storybook/addon-knobs": "^5.3.9",
     "@storybook/addon-storysource": "^5.3.9",
+    "@storybook/addon-viewport": "^5.3.12",
     "@storybook/html": "^5.3.9",
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
@@ -117,18 +122,16 @@
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "perfect-scrollbar": "^1.5.0",
-    "popper.js": "^1.16.1",
     "postcss-cli": "^7.1.0",
     "postcss-combine-duplicated-selectors": "^8.1.0",
     "postcss-merge-rules": "^4.0.3",
     "rimraf": "^3.0.0",
     "rollup": "^1.29.1",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "semver": "^7.1.1",
     "shelljs": "^0.8.3",
     "shx": "^0.3.2",
+    "storybook-addon-root-attribute": "^0.2.3",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended-scss": "^4.1.0",
     "stylelint-config-standard": "^19.0.0",
@@ -166,5 +169,7 @@
       "maxSize": "15 kB"
     }
   ],
-  "dependencies": {}
+  "dependencies": {
+    "@coreui/icons": "^1.0.1"
+  }
 }
