--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-pro",
-  "version": "3.0.0-rc.5",
+  "version": "3.0.0",
   "description": "UI Kit built on top of Bootstrap 4",
   "keywords": [
     "bootstrap",
