--- a/package.json
+++ b/package.json
@@ -87,30 +87,32 @@
     "@popperjs/core": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "@popperjs/core": "^2.4.0",
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.2",
-    "@storybook/addon-docs": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-storysource": "^5.3.18",
-    "@storybook/addon-viewport": "^5.3.18",
-    "@storybook/html": "^5.3.18",
+    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-storysource": "^5.3.19",
+    "@storybook/addon-viewport": "^5.3.19",
+    "@storybook/html": "^5.3.19",
     "autoprefixer": "^9.8.0",
     "babel-eslint": "^10.1.0",
     "bundlesize": "^0.18.0",
     "chalk": "^4.0.0",
     "clean-css-cli": "^4.3.0",
-    "copyfiles": "^2.2.0",
+    "copyfiles": "^2.3.0",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
-    "eslint": "^7.0.0",
-    "eslint-config-xo": "^0.29.1",
+    "eslint": "^7.1.0",
+    "eslint-config-xo": "^0.30.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-unicorn": "^20.0.0",
+    "eslint-plugin-unicorn": "^20.1.0",
     "find-unused-sass-variables": "^2.0.0",
     "foreach-cli": "^1.8.1",
     "node-sass": "^4.14.1",
@@ -121,15 +123,14 @@
     "postcss-combine-duplicated-selectors": "^8.1.0",
     "postcss-merge-rules": "^4.0.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.10.4",
-    "rollup-plugin-babel": "^4.4.0",
+    "rollup": "^2.13.1",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "storybook-addon-root-attribute": "^1.0.0",
-    "stylelint": "^13.4.1",
+    "stylelint": "^13.6.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.0.0",
+    "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.17.2",
     "terser": "^4.7.0"
   },
