feat: add first part of tests

--- a/package.json
+++ b/package.json
@@ -70,9 +70,15 @@
     "js-minify-standalone": "terser --compress typeofs=false --mangle --comments \"/^!/\" --source-map \"content=dist/js/coreui.js.map,includeSources,url=coreui.min.js.map\" --output dist/js/coreui.min.js dist/js/coreui.js",
     "js-minify-standalone-esm": "terser --compress --mangle --comments \"/^!/\" --source-map \"content=dist/js/coreui.esm.js.map,includeSources,url=coreui.esm.min.js.map\" --output dist/js/coreui.esm.min.js dist/js/coreui.esm.js",
     "js-minify-bundle": "terser --compress typeofs=false --mangle --comments \"/^!/\" --source-map \"content=dist/js/coreui.bundle.js.map,includeSources,url=coreui.bundle.min.js.map\" --output dist/js/coreui.bundle.min.js dist/js/coreui.bundle.js",
+    "js-test": "npm-run-all --parallel js-test-karma js-test-jquery js-test-integration",
+    "js-debug": "cross-env PRODUCTION=true DEBUG=true npm run js-test-karma",
+    "js-test-karma": "karma start js/tests/karma.conf.js",
+    "js-test-integration": "rollup --config js/tests/integration/rollup.bundle.js && rollup --config js/tests/integration/rollup.bundle-modularity.js",
+    "js-test-cloud": "cross-env BROWSER=true npm run js-test-karma",
+    "js-test-jquery": "cross-env JQUERY=true npm run js-test-karma",
     "release-version": "node build/change-version.js",
     "release-zip": "cd dist/ && zip -r9 coreui-$npm_package_version-dist.zip * && shx mv coreui-$npm_package_version-dist.zip ..",
-    "test": "npm-run-all css-lint js-lint dist bundlesize",
+    "test": "npm-run-all lint dist js-test",
     "watch": "npm-run-all --parallel watch-css watch-js",
     "watch-js": "nodemon --ignore js/dist/ --ignore dist/ -e js -x \"npm-run-all js-compile* js-minify*\"",
     "watch-css": "nodemon --ignore dist/ --ignore css/ --ignore scss/partials/ -e scss -x \"npm run css\"",
@@ -115,6 +121,17 @@
     "eslint-plugin-unicorn": "^20.1.0",
     "find-unused-sass-variables": "^2.0.0",
     "foreach-cli": "^1.8.1",
+    "ip": "^1.1.5",
+    "jquery": "^3.5.1",
+    "karma": "^5.0.9",
+    "karma-browserstack-launcher": "^1.6.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-detect-browsers": "^2.3.3",
+    "karma-firefox-launcher": "^1.3.0",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-rollup-preprocessor": "^7.0.5",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
@@ -124,6 +141,7 @@
     "postcss-merge-rules": "^4.0.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.13.1",
+    "rollup-plugin-istanbul": "^2.0.1",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "storybook-addon-root-attribute": "^1.0.0",
