--- a/package.json
+++ b/package.json
@@ -80,9 +80,7 @@
     "test": "npm-run-all lint dist js-test",
     "watch": "npm-run-all --parallel watch-css watch-js",
     "watch-js": "nodemon --ignore js/dist/ --ignore dist/ -e js -x \"npm-run-all js-compile* js-minify*\"",
-    "watch-css": "nodemon --ignore dist/ --ignore css/ --ignore scss/partials/ -e scss -x \"npm run css\"",
-    "storybook": "start-storybook -s ./stories/static,./node_modules -p 6006",
-    "build-storybook": "build-storybook"
+    "watch-css": "nodemon --ignore dist/ --ignore css/ --ignore scss/partials/ -e scss -x \"npm run css\""
   },
   "peerDependencies": {
     "perfect-scrollbar": "^1.5.0",
@@ -99,11 +97,6 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-replace": "^2.3.3",
-    "@storybook/addon-docs": "^6.0.21",
-    "@storybook/addon-knobs": "^6.0.21",
-    "@storybook/addon-storysource": "^6.0.21",
-    "@storybook/addon-viewport": "^6.0.21",
-    "@storybook/html": "^6.0.21",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "bundlesize": "^0.18.0",
@@ -142,7 +135,6 @@
     "rollup-plugin-istanbul": "^2.0.1",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
-    "storybook-addon-root-attribute": "^1.0.0",
     "stylelint": "13.6.1",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
