docs: add Loading Buttons

--- a/docs/data/sidebar.yml
+++ b/docs/data/sidebar.yml
@@ -77,6 +77,7 @@
     - title: Footer
     - title: Header
     - title: List group
+    - title: Loading buttons
     - title: Modal
     - title: Navs & tabs
     - title: Navbar
