--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coreui/coreui",
+  "name": "@coreui/coreui-pro",
   "description": "The most popular front-end framework for developing responsive, mobile-first projects on the web rewritten by the CoreUI Team",
   "version": "4.0.0-alpha.0",
   "version_short": "4.0",
