--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@coreui/coreui-pro",
   "description": "The most popular front-end framework for developing responsive, mobile-first projects on the web rewritten by the CoreUI Team",
-  "version": "4.5.0",
+  "version": "4.6.0-alpha.0",
   "config": {
-    "version_short": "4.5"
+    "version_short": "4.6"
   },
   "keywords": [
     "css",
