--- a/package.json
+++ b/package.json
@@ -84,8 +84,7 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "peerDependencies": {
-    "@popperjs/core": "^2.11.8",
-    "date-fns": "^2.30.0"
+    "@popperjs/core": "^2.11.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
@@ -100,7 +99,6 @@
     "bundlewatch": "^0.3.3",
     "clean-css-cli": "^5.6.2",
     "cross-env": "^7.0.3",
-    "date-fns": "^2.30.0",
     "eslint": "^8.50.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-plugin-html": "^7.1.0",
@@ -159,15 +157,13 @@
     "shim": {
       "js/coreui": {
         "deps": [
-          "@popperjs/core",
-          "date-fns"
+          "@popperjs/core"
         ]
       }
     },
     "dependencies": {},
     "peerDependencies": {
-      "@popperjs/core": "^2.11.8",
-      "date-fns": "^2.30.0"
+      "@popperjs/core": "^2.11.8"
     }
   }
 }
