feat(Rating): alpha version initial release

--- a/docs/data/sidebar.yml
+++ b/docs/data/sidebar.yml
@@ -76,6 +76,10 @@
       badge:
         color: danger
         text: PRO
+    - title: Rating
+      badge:
+        color: danger
+        text: PRO
     - title: Time Picker
       badge:
         color: danger
