feat(RangeSlider): new component initial release

--- a/docs/data/sidebar.yml
+++ b/docs/data/sidebar.yml
@@ -66,6 +66,10 @@
         text: PRO
     - title: Checks & radios
     - title: Range
+    - title: Range Slider
+      badge:
+        color: danger
+        text: PRO
     - title: Input group
     - title: Floating labels
     - title: Date Picker
