docs: fix pro examples

--- a/docs/data/sidebar.yml
+++ b/docs/data/sidebar.yml
@@ -78,6 +78,9 @@
         color: danger
         text: PRO
     - title: Multi Select
+      badge:
+        color: danger
+        text: PRO
     - title: Password Input
       badge:
         color: danger
